// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Genesis Snapshot Tests Go multi-step refactor plan should produce stable index for 3-step plan 1`] = `
"# Architect Genesis v2 — Multi-Pass Prompt Engineering

This folder contains the complete Refactoring Plan extracted from your architecture analysis.
Use these files to trigger AI refactoring via web interfaces (ChatGPT, Claude, Gemini, etc.)
without exposing your code directly via APIs.

## Mission Overview
**Total Steps:** 3
**Total Prompt Files:** 7
**Multi-Pass Steps:** 2
**Total Operations:** 9
**Projected Quality Gain:** +18 pts

## Multi-Pass Execution Guide

Steps with multiple passes must be executed **sequentially**. Each pass produces
output that feeds into the next. Copy the AI's response from Pass N and include it
as context when running Pass N+1.

## Budget Configuration
- Max tokens per prompt: 30,000
- Max full file inlines per step: 5
- Max lines per file: 300

## Steps

- [ ] [Step #1] Split hub: handler.go — **3 passes** (hub-splitter)
  - [ ] Pass 1: Analyze the hub file and identify split boundaries (File: 01-step-1-pass-1.md)
  - [ ] Pass 2: Generate the split module files (File: 01-step-1-pass-2.md) ← depends on pass 1
  - [ ] Pass 3: Update all consumer imports (File: 01-step-1-pass-3.md) ← depends on pass 2
- [ ] [Step #2] Remove dead code: legacy_migration.go (File: 02-step-2.md)
- [ ] [Step #3] Group co-imported modules into internal/auth/ — **3 passes** (module-grouper)
  - [ ] Pass 1: Analyze file relationships and confirm grouping (File: 03-step-3-pass-1.md)
  - [ ] Pass 2: Execute the file moves and create module init (File: 03-step-3-pass-2.md) ← depends on pass 1
  - [ ] Pass 3: Fix all broken imports across the project (File: 03-step-3-pass-3.md) ← depends on pass 2

---
*Generated by Genesis Engine v2 (Multi-Pass) — Architect v9.0*
"
`;

exports[`Genesis Snapshot Tests Go multi-step refactor plan should produce stable multi-pass hub-splitter step: go-hub-splitter-pass-1 1`] = `
"# Step #1: Split hub: handler.go
## Pass 1 of 3: Analyze the hub file and identify split boundaries

**Rule:** hub-splitter
**Context source:** Original file content
**Output contract:** A structured JSON analysis with: (1) groups of related exports, (2) which consumers use which group, (3) proposed module names

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub: handler.go
**Rationale:** Central handler creates coupling bottleneck.

You are analyzing a hub file that needs to be split.
**Target file:** \`internal/handler/handler.go\`
**New modules to create:** \`internal/handler/user_handler.go\`, \`internal/handler/health_handler.go\`

**Your task (analysis only — do NOT write code yet):**
1. Read the hub file and list ALL exports (functions, classes, types, constants)
2. Group exports by domain affinity (which exports are used together?)
3. For each proposed module (\`internal/handler/user_handler.go\`, \`internal/handler/health_handler.go\`), list which exports should move there
4. List which consumers depend on which groups

**Output format:** Structured JSON with keys: \`groups\`, \`consumerMapping\`

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (01-step-1-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests Go multi-step refactor plan should produce stable step-2 (dead-code DELETE op — single pass) 1`] = `
"# Step #2: Remove dead code: legacy_migration.go

## Anti-Pattern Context
**Rule Violated**: dead-code-detector

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat to act as your autonomous agent._

---

You are a strict Software Architect AI. Please rewrite the following file(s) according to the architectural directives.

**Task Directive:**
Verify and remove legacy_migration.go if truly unused.


### Target Operation for \`internal/legacy_migration.go\`
[DELETE] Remove orphan file after verifying no references

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it
"
`;

exports[`Genesis Snapshot Tests Go multi-step refactor plan should produce stable step-3 (module-grouper — 3 passes): module-grouper-pass-1 1`] = `
"# Step #3: Group co-imported modules into internal/auth/
## Pass 1 of 3: Analyze file relationships and confirm grouping

**Rule:** module-grouper
**Context source:** Original file content
**Output contract:** JSON: { module_name, files_to_move: [{from, to}], barrel_exports: string[] }

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/3** of a multi-pass refactoring chain.

**Rule:** module-grouper
**Step:** Group co-imported modules into internal/auth/
**Rationale:** Co-imported files from different directories should be co-located.

Analyze whether the proposed file grouping makes architectural sense.

**Proposed moves:**
- \`pkg/auth_token.go\` → \`TBD\`
- \`pkg/auth_middleware.go\` → \`TBD\`



1. Verify the files share a cohesive domain responsibility
2. Check for circular dependencies between the grouped files
3. Output the confirmed grouping as JSON

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (03-step-3-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests Python barrel + import-organizer plan should produce stable index for multi-rule plan 1`] = `
"# Architect Genesis v2 — Multi-Pass Prompt Engineering

This folder contains the complete Refactoring Plan extracted from your architecture analysis.
Use these files to trigger AI refactoring via web interfaces (ChatGPT, Claude, Gemini, etc.)
without exposing your code directly via APIs.

## Mission Overview
**Total Steps:** 2
**Total Prompt Files:** 4
**Multi-Pass Steps:** 2
**Total Operations:** 4
**Projected Quality Gain:** +13 pts

## Multi-Pass Execution Guide

Steps with multiple passes must be executed **sequentially**. Each pass produces
output that feeds into the next. Copy the AI's response from Pass N and include it
as context when running Pass N+1.

## Budget Configuration
- Max tokens per prompt: 30,000
- Max full file inlines per step: 5
- Max lines per file: 300

## Steps

- [ ] [Step #1] Optimize barrel: app/core/__init__.py — **2 passes** (barrel-optimizer)
  - [ ] Pass 1: Analyze barrel re-exports and map consumer dependencies (File: 01-step-1-pass-1.md)
  - [ ] Pass 2: Replace barrel imports with direct imports in consumers (File: 01-step-1-pass-2.md) ← depends on pass 1
- [ ] [Step #2] Create facade for orchestrator.py — **2 passes** (import-organizer)
  - [ ] Pass 1: Generate the dependency facade (File: 02-step-2-pass-1.md)
  - [ ] Pass 2: Rewire the source file to import from facade (File: 02-step-2-pass-2.md) ← depends on pass 1

---
*Generated by Genesis Engine v2 (Multi-Pass) — Architect v9.0*
"
`;

exports[`Genesis Snapshot Tests Python barrel + import-organizer plan should produce stable multi-pass prompts for barrel-optimizer: barrel-optimizer-pass-1 1`] = `
"# Step #1: Optimize barrel: app/core/__init__.py
## Pass 1 of 2: Analyze barrel re-exports and map consumer dependencies

**Rule:** barrel-optimizer
**Context source:** Original file content
**Output contract:** JSON mapping: { barrel_exports: string[], consumer_dependencies: Record<consumer_path, needed_modules[]> }

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/2** of a multi-pass refactoring chain.

**Rule:** barrel-optimizer
**Step:** Optimize barrel: app/core/__init__.py
**Rationale:** Barrel files create unnecessary dependency chains.

Analyze the barrel file and its consumers.
**Barrel file:** \`app/routes/api.py\`
**Consumers:** \`app/routes/api.py\`, \`app/routes/auth.py\`

1. List everything the barrel re-exports
2. For each consumer, determine which specific modules it actually needs
3. Output a JSON mapping of consumer → direct module paths

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (01-step-1-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests Python barrel + import-organizer plan should produce stable multi-pass prompts for barrel-optimizer: barrel-optimizer-pass-2 1`] = `
"# Step #1: Optimize barrel: app/core/__init__.py
## Pass 2 of 2: Replace barrel imports with direct imports in consumers

**Rule:** barrel-optimizer
**Context source:** Output from Pass 1
**Output contract:** Updated import statements for each consumer file, and simplified barrel file

> **Input required:** Copy the AI response from Pass 1 (01-step-1-pass-1.md) and paste it below before running this prompt.

<paste_previous_pass_output_here>

---

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 2/2** of a multi-pass refactoring chain.

**Rule:** barrel-optimizer
**Step:** Optimize barrel: app/core/__init__.py
**Rationale:** Barrel files create unnecessary dependency chains.

Using the dependency mapping from Pass 1, update all consumers.

**For each consumer:**
- Remove the barrel import
- Add direct imports to the specific modules it needs
- Preserve all functionality

**For the barrel file (\`app/routes/api.py\`):**
- Keep only public API exports
- Remove internal re-exports that consumers now access directly

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Done:** This is the final pass for Step #1. Apply the changes to your codebase.
"
`;

exports[`Genesis Snapshot Tests Python barrel + import-organizer plan should produce stable multi-pass prompts for import-organizer: import-organizer-pass-1 1`] = `
"# Step #2: Create facade for orchestrator.py
## Pass 1 of 2: Generate the dependency facade

**Rule:** import-organizer
**Context source:** Original file content
**Output contract:** Complete source code for the facade file that centralizes cross-module imports

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/2** of a multi-pass refactoring chain.

**Rule:** import-organizer
**Step:** Create facade for orchestrator.py
**Rationale:** Cross-boundary imports indicate SRP violation.

Create a dependency facade to centralize scattered imports.
**Facade file to create:** \`app/orchestrator_deps.py\`
Create dependency facade

**Template:**
\`\`\`
"""
Dependency facade for orchestrator.py
Consolidates cross-boundary imports into a single entry point.
"""
from app.auth.login import LoginService
from app.db.repo import UserRepository
from app.cache.redis import CacheClient
\`\`\`

**Rules:**
- Import all cross-module dependencies in the facade
- Re-export them with clear, descriptive names
- Group imports by domain/layer
- Add JSDoc explaining the facade's purpose

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (02-step-2-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests Python barrel + import-organizer plan should produce stable multi-pass prompts for import-organizer: import-organizer-pass-2 1`] = `
"# Step #2: Create facade for orchestrator.py
## Pass 2 of 2: Rewire the source file to import from facade

**Rule:** import-organizer
**Context source:** Output from Pass 1
**Output contract:** Updated source file with all cross-module imports replaced by facade imports

> **Input required:** Copy the AI response from Pass 1 (02-step-2-pass-1.md) and paste it below before running this prompt.

<paste_previous_pass_output_here>

---

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 2/2** of a multi-pass refactoring chain.

**Rule:** import-organizer
**Step:** Create facade for orchestrator.py
**Rationale:** Cross-boundary imports indicate SRP violation.

Now update the source file to import from the new facade.

**Files to update:**
- \`app/orchestrator.py\`: Refactor to use facade instead of scattered imports

**Rules:**
- Replace scattered cross-module imports with a single facade import
- Do NOT change any business logic
- Ensure all used symbols are available via the facade

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Done:** This is the final pass for Step #2. Apply the changes to your codebase.
"
`;

exports[`Genesis Snapshot Tests TypeScript hub-split plan should produce stable index file 1`] = `
"# Architect Genesis v2 — Multi-Pass Prompt Engineering

This folder contains the complete Refactoring Plan extracted from your architecture analysis.
Use these files to trigger AI refactoring via web interfaces (ChatGPT, Claude, Gemini, etc.)
without exposing your code directly via APIs.

## Mission Overview
**Total Steps:** 1
**Total Prompt Files:** 3
**Multi-Pass Steps:** 1
**Total Operations:** 5
**Projected Quality Gain:** +14 pts

## Multi-Pass Execution Guide

Steps with multiple passes must be executed **sequentially**. Each pass produces
output that feeds into the next. Copy the AI's response from Pass N and include it
as context when running Pass N+1.

## Budget Configuration
- Max tokens per prompt: 30,000
- Max full file inlines per step: 5
- Max lines per file: 300

## Steps

- [ ] [Step #1] Split hub file: database.ts — **3 passes** (hub-splitter)
  - [ ] Pass 1: Analyze the hub file and identify split boundaries (File: 01-step-1-pass-1.md)
  - [ ] Pass 2: Generate the split module files (File: 01-step-1-pass-2.md) ← depends on pass 1
  - [ ] Pass 3: Update all consumer imports (File: 01-step-1-pass-3.md) ← depends on pass 2

---
*Generated by Genesis Engine v2 (Multi-Pass) — Architect v9.0*
"
`;

exports[`Genesis Snapshot Tests TypeScript hub-split plan should produce stable multi-pass prompts for hub-splitter: hub-splitter-pass-1 1`] = `
"# Step #1: Split hub file: database.ts
## Pass 1 of 3: Analyze the hub file and identify split boundaries

**Rule:** hub-splitter
**Context source:** Original file content
**Output contract:** A structured JSON analysis with: (1) groups of related exports, (2) which consumers use which group, (3) proposed module names

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub file: database.ts
**Rationale:** High fan-in creates coupling bottleneck.

You are analyzing a hub file that needs to be split.
**Target file:** \`src/core/database.ts\`
**New modules to create:** \`src/core/database_query.ts\`, \`src/core/database_connection.ts\`

**Your task (analysis only — do NOT write code yet):**
1. Read the hub file and list ALL exports (functions, classes, types, constants)
2. Group exports by domain affinity (which exports are used together?)
3. For each proposed module (\`src/core/database_query.ts\`, \`src/core/database_connection.ts\`), list which exports should move there
4. List which consumers depend on which groups

**Output format:** Structured JSON with keys: \`groups\`, \`consumerMapping\`

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (01-step-1-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests TypeScript hub-split plan should produce stable multi-pass prompts for hub-splitter: hub-splitter-pass-2 1`] = `
"# Step #1: Split hub file: database.ts
## Pass 2 of 3: Generate the split module files

**Rule:** hub-splitter
**Context source:** Output from Pass 1
**Output contract:** Complete source code for each new module file, plus the updated original hub file

> **Input required:** Copy the AI response from Pass 1 (01-step-1-pass-1.md) and paste it below before running this prompt.

<paste_previous_pass_output_here>

---

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 2/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub file: database.ts
**Rationale:** High fan-in creates coupling bottleneck.

Based on the analysis from Pass 1, generate the actual code files.

**Files to create:**
- \`src/core/database_query.ts\`: Create query utilities split
- \`src/core/database_connection.ts\`: Create connection pool management

**Original hub file to update:** \`src/core/database.ts\`
- Remove extracted exports
- Add re-exports from new modules for backward compatibility

**Rules:**
- Each new module must be self-contained (no circular imports)
- Preserve ALL original exports — nothing should break
- Add JSDoc noting these files were extracted from the hub
- Use the EXACT module boundaries from the Pass 1 analysis

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 3 (01-step-1-pass-3.md)
"
`;

exports[`Genesis Snapshot Tests TypeScript hub-split plan should produce stable multi-pass prompts for hub-splitter: hub-splitter-pass-3 1`] = `
"# Step #1: Split hub file: database.ts
## Pass 3 of 3: Update all consumer imports

**Rule:** hub-splitter
**Context source:** Output from Pass 2
**Output contract:** Updated import statements for each consumer file

> **Input required:** Copy the AI response from Pass 2 (01-step-1-pass-2.md) and paste it below before running this prompt.

<paste_previous_pass_output_here>

---

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 3/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub file: database.ts
**Rationale:** High fan-in creates coupling bottleneck.

Now update all consumers to import from the new specific modules.

**Consumer files to update:**
- \`src/repos/user.repo.ts\`: Update imports to use database_query
- \`src/repos/order.repo.ts\`: Update imports to use database_query


**Rules:**
- Replace barrel imports with direct imports from the new modules
- Do NOT change any logic — only import paths
- If a consumer uses exports from multiple new modules, add multiple import lines
- Verify no import is left pointing to the old monolithic path

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Done:** This is the final pass for Step #1. Apply the changes to your codebase.
"
`;

exports[`Genesis Snapshot Tests budget variation stability should produce stable output with large budget (100K tokens) 1`] = `
"# Step #1: Split hub file: database.ts
## Pass 1 of 3: Analyze the hub file and identify split boundaries

**Rule:** hub-splitter
**Context source:** Original file content
**Output contract:** A structured JSON analysis with: (1) groups of related exports, (2) which consumers use which group, (3) proposed module names

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub file: database.ts
**Rationale:** High fan-in creates coupling bottleneck.

You are analyzing a hub file that needs to be split.
**Target file:** \`src/core/database.ts\`
**New modules to create:** \`src/core/database_query.ts\`, \`src/core/database_connection.ts\`

**Your task (analysis only — do NOT write code yet):**
1. Read the hub file and list ALL exports (functions, classes, types, constants)
2. Group exports by domain affinity (which exports are used together?)
3. For each proposed module (\`src/core/database_query.ts\`, \`src/core/database_connection.ts\`), list which exports should move there
4. List which consumers depend on which groups

**Output format:** Structured JSON with keys: \`groups\`, \`consumerMapping\`

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (01-step-1-pass-2.md)
"
`;

exports[`Genesis Snapshot Tests budget variation stability should produce stable output with qwen-32b budget (small context) 1`] = `
"# Step #1: Split hub file: database.ts
## Pass 1 of 3: Analyze the hub file and identify split boundaries

**Rule:** hub-splitter
**Context source:** Original file content
**Output contract:** A structured JSON analysis with: (1) groups of related exports, (2) which consumers use which group, (3) proposed module names

## Architect AI Prompt
_Copy and paste the text block below directly into your AI Chat._

---

You are a strict Software Architect AI executing **Pass 1/3** of a multi-pass refactoring chain.

**Rule:** hub-splitter
**Step:** Split hub file: database.ts
**Rationale:** High fan-in creates coupling bottleneck.

You are analyzing a hub file that needs to be split.
**Target file:** \`src/core/database.ts\`
**New modules to create:** \`src/core/database_query.ts\`, \`src/core/database_connection.ts\`

**Your task (analysis only — do NOT write code yet):**
1. Read the hub file and list ALL exports (functions, classes, types, constants)
2. Group exports by domain affinity (which exports are used together?)
3. For each proposed module (\`src/core/database_query.ts\`, \`src/core/database_connection.ts\`), list which exports should move there
4. List which consumers depend on which groups

**Output format:** Structured JSON with keys: \`groups\`, \`consumerMapping\`

---

## Response Format

Return EACH modified or created file in a separate fenced code block.
The FIRST LINE inside each code block MUST be a comment with the FULL file path.

Example:
\`\`\`typescript
// src/core/repos/user-repo.ts
import { Database } from '../shared/database.js';
// ... rest of file
\`\`\`

Rules:
1. Include the COMPLETE file content, not just diffs
2. One code block per file — never combine multiple files
3. If a file needs no changes, do NOT include it
4. Preserve all existing functionality unless explicitly told to modify it

---

> **Next:** Copy the AI response above and proceed to Pass 2 (01-step-1-pass-2.md)
"
`;
